# mesh_weaver

./: .gitignore  CMakeLists.txt  README.md  README.txt
src/: HalfEdgeMesh.h  Mesh.h  ObjIO.cpp  ObjIO.h  main.cpp
src/core/: MathTypes.h
src/geometry/: Geometry.cpp  Geometry.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h
src/renderer/: Camera.cpp  Camera.h  FlatShader.cpp  FrameBuffer.cpp  FrameBuffer.h  PhongShader.cpp  Rasterizer.cpp  Rasterizer.h  Shader.h
src/window/: Win32Window.cpp  Win32Window.h
